--- a/_site.yml
+++ b/_site.yml
@@ -9,4 +9,8 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Team"
+      href: team.html
+    - text: "Supporters"
+      href: supporters.html
 output: distill::distill_article
